tests/golden/type_errors/range_wrong_arity.err
Type error at 1:7: expected 1 to 3 arguments but got 0
  range();
        ^
